--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "npm run install && npm run build"
+  command = "yarn && yarn build"
   functions = "functions"
 
 [[redirects]]
